lib/tests/fixtures/compiler/evaluation/existing_type_alias.baseline
Error: existing_type_alias.pp:2:6: node 'test': type alias 'Foo' was previously defined at existing_type_alias.pp:1.
  type Foo = String
       ^~~
