lib/tests/fixtures/compiler/evaluation/existing_type_alias.pp
type Foo = Integer
type Foo = String
